tests/invalid/inst_list_dup.m
:- module inst_list_dup.
:- interface.
:- inst inst1 == bound(ground-unique ; ground-ground).
